--- a/kocom.conf
+++ b/kocom.conf
@@ -90,4 +90,7 @@ show_mqtt_publish = True
 # light_count (required) : Light Count
 init_temp = 23
 init_fan_mode = Medium
-light_count = 4
+livingroom_light_count = 3
+bedroom_light_count = 1
+room1_light_count = 1
+room2_light_count = 1
